echo-service-domain-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc-domain
  namespace: testsvc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: http-svc.yudong.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
