echo-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc
  namespace: testsvc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /http-svc
        backend:
          serviceName: http-svc
          servicePort: 80
